--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,7 @@
 {
+    "A new verification link has been sent to the email address you provided during registration.":"Se ha enviado un nuevo enlace de verificación a la dirección de correo electrónico que proporcionó durante el registro.",
+    "Resend Verification Email":"Reenviar correo electrónico de verificación",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.":"Gracias por registrarte! Antes de comenzar, ¿podría verificar su dirección de correo electrónico haciendo clic en el enlace que le acabamos de enviar? Si no recibió el correo electrónico, con gusto le enviaremos otro.",
     "The password must be at least 8 characters.":"La contraseña debe tener al menos 8 caracteres.",
     "Manage Account":"Administrar cuenta",
     "Remove Photo":"Remover foto",
